Avoid pure black icons in Notification Panel
The pure black icons which drew too much
attention when they are next to a lighter
text is changed by controlling the opacity
of the icons.

Bug: T119378

--- a/modules/ooui/styles/mw.echo.ui.NotificationBadgeWidget.less
+++ b/modules/ooui/styles/mw.echo.ui.NotificationBadgeWidget.less
@@ -57,6 +57,7 @@
 				> .oo-ui-iconWidget {
 					margin: 0.7em 0 1em 1em;
 					float: left;
+				        opacity: 0.8;
 				}
 
 				> .oo-ui-labelElement-label {
